force-app/main/default/objects/ContactPointAddress/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Name of the building</description>
    <label>Building Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>