force-app/main/default/objects/ContactPointAddress/fields/Delivery_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Identifier__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_QAS</complianceGroup>
    <description>Delivery Point Identifier (dpid) from QAS address lookup/format API</description>
    <label>Delivery Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>