force-app/main/default/objects/ContactPointAddress/fields/Global_Address_Key__c.field-meta.xml
<CustomField>
    <fullName>Global_Address_Key__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - QAS</complianceGroup>
    <description>This should get populated when a QAS address is selected. Business user should not enter this value manually.</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Global Address Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>