force-app/main/default/objects/ContactPointAddress/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <description>User who last modified the record in Salesforce</description>
    <formula>HYPERLINK(&apos;/&apos; + LastModifiedBy.Id , LastModifiedBy.FirstName + &apos; &apos; + LastModifiedBy.LastName , &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By</label>
    <type>Text</type>
</CustomField>