force-app/main/default/objects/ContactPointAddress/fields/P_O_Box__c.field-meta.xml
<CustomField>
    <fullName>P_O_Box__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>PO BOX</description>
    <label>PO BOX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>