force-app/main/default/objects/ContactPointAddress/fields/QAS_Valid_Address__c.field-meta.xml
<CustomField>
    <fullName>QAS_Valid_Address__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Salesforce</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Flag to depict if address is validated from QAS.</description>
    <label>QAS Valid Address</label>
    <type>Checkbox</type>
</CustomField>