force-app/main/default/objects/ContactPointAddress/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Street Name</description>
    <label>Street Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>