force-app/main/default/objects/ContactPointAddress/fields/Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Street_Number__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Street Number</description>
    <label>Street Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>