force-app/main/default/objects/ContactPointAddress/fields/Street_Type__c.field-meta.xml
<CustomField>
    <fullName>Street_Type__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Street Type</description>
    <label>Street Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCS</fullName>
                <label>ACCESS</label>
            </value>
            <value>
                <fullName>ALLY</fullName>
                <label>ALLEY</label>
            </value>
            <value>
                <fullName>ALWY</fullName>
                <label>ALLEYWAY</label>
            </value>
            <value>
                <fullName>AMBL</fullName>
                <label>AMBLE</label>
            </value>
            <value>
                <fullName>ANCG</fullName>
                <label>ANCHORAGE</label>
            </value>
            <value>
                <fullName>APP</fullName>
                <label>APPROACH</label>
            </value>
            <value>
                <fullName>ARC</fullName>
                <label>ARCADE</label>
            </value>
            <value>
                <fullName>ART</fullName>
                <label>ARTERY</label>
            </value>
            <value>
                <fullName>AVE</fullName>
                <label>AVENUE</label>
            </value>
            <value>
                <fullName>BASN</fullName>
                <label>BASIN</label>
            </value>
            <value>
                <fullName>BCH</fullName>
                <label>BEACH</label>
            </value>
            <value>
                <fullName>BEND</fullName>
            </value>
            <value>
                <fullName>BLK</fullName>
                <label>BLOCK</label>
            </value>
            <value>
                <fullName>BVD</fullName>
                <label>BOULEVARD</label>
            </value>
            <value>
                <fullName>BRCE</fullName>
                <label>BRACE</label>
            </value>
            <value>
                <fullName>BRAE</fullName>
            </value>
            <value>
                <fullName>BRK</fullName>
                <label>BREAK</label>
            </value>
            <value>
                <fullName>BDGE</fullName>
                <label>BRIDGE</label>
            </value>
            <value>
                <fullName>BDWY</fullName>
                <label>BROADWAY</label>
            </value>
            <value>
                <fullName>BROW</fullName>
            </value>
            <value>
                <fullName>BYPA</fullName>
                <label>BYPASS</label>
            </value>
            <value>
                <fullName>BYWY</fullName>
                <label>BYWAY</label>
            </value>
            <value>
                <fullName>CAUS</fullName>
                <label>CAUSEWAY</label>
            </value>
            <value>
                <fullName>CTR</fullName>
                <label>CENTRE</label>
            </value>
            <value>
                <fullName>CNWY</fullName>
                <label>CENTREWAY</label>
            </value>
            <value>
                <fullName>CH</fullName>
                <label>CHASE</label>
            </value>
            <value>
                <fullName>CIR</fullName>
                <label>CIRCLE</label>
            </value>
            <value>
                <fullName>CLT</fullName>
                <label>CIRCLET</label>
            </value>
            <value>
                <fullName>CCT</fullName>
                <label>CIRCUIT</label>
            </value>
            <value>
                <fullName>CRCS</fullName>
                <label>CIRCUS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>