force-app/main/default/objects/ContactPointAddress/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Personal_Information;Source_OCV</complianceGroup>
    <description>Unit/Flat/Level number</description>
    <label>Unit/Flat/Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>